src/components/footer/footer.component.scss
:host {
  display: block;
  align-self: flex-end;
}

.footer_container {
  @apply mx-auto
  grid
  w-full
  max-w-screen-xl
  px-4
  pt-8
  text-sm
  transition-all
  duration-300
  md:text-base;
}

.footer_link {
  @apply border-b-2
  border-transparent
  hover:border-black
  hover:text-black/80;
}

.footer_wrapper {
  @apply flex
  flex-wrap
  gap-x-12
  gap-y-4
  md:gap-x-8
  lg:gap-x-16;

  div {
    @apply min-w-20;
  }
}

.footer_links {
  @apply grid
  gap-2;
}

.footer_contacts {
  @apply flex
  flex-col
  underline;
}

.footer_copyright {
  @apply grid
  w-full
  items-center
  gap-1
  py-6
  xs:grid-cols-3;

  .copyright {
    @apply flex
    flex-wrap
    items-center
    gap-4
    text-center
    xs:col-span-2
    md:gap-8;
  }

  .footer_socials {
    @apply grid
    xs:justify-end;
  }
}

.footer_address {
  p:not(:first-child) {
    @apply mt-5;
  }
}

